--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,5 @@ appTitle=App Title
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=App Title
+
+detailTitle = Agency Details
